--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
+  "homepage": "https://obiedaSanajleh/github.io/todolist-react",
+
   "name": "todolist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -11,6 +17,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.1",
